--- a/less/bootstrap-custom.less
+++ b/less/bootstrap-custom.less
@@ -8,7 +8,7 @@
 @import "../bower_components/bootstrap/less/variables.less";
 @import "../bower_components/bootstrap/less/mixins.less";
 
-@navbar-inverse-bg: darkblue;
+@navbar-inverse-bg: orange;
 @btn-default-color: blue;
 @jumbotron-bg:lightblue;
 
